# registry-codes

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  tox.ini
.github/workflows/: append-database-files.yaml  append-release-notes.yaml  build-and-publish.yml  docker_test.yml  publish-codes.yml  python_test.yml  release-codes.yml  release-databases.yaml  rolling-release.yaml  run-tests.yml
registry_codes/: schema.py  utils.py  utils_backup.py
scripts/: 001_download_external.sh  001_postgres.sh  002_postgres.sh  002_sqlite.sh  003_redis.sh  004_sqlite.sh  004a_sqlite.sh  004b_sqlite.sh  build_postgres.py  build_sqlite.py  code_map_formatting.py  download_gp_ods.sh  load_into_remote.py  process_ods.py  process_ods_codes.awk
tables/: README.md
tables/code_exclusion/: pkb_observations.csv  pv_observations.csv  schema.sql
tables/code_list/: HL7_0004.csv  ODS.csv  RR19.csv  RR2.csv  RR22.csv  RR23.csv  RR35.csv  RR50.csv  RR51.csv  cf_rr7_discharge.csv  cf_rr7_treatment.csv  dose_units.csv  edta2.#csv  edta2.csv  edta_cod.csv  edta_prd.csv  local_malignancy.csv  local_survey_questions.csv  local_survey_types.csv  loinc_observations.csv  nhs_data_dictionary_employment_status.csv  nhs_data_dictionary_ethnicity.csv  nhs_data_dictionary_language_code.csv  pkb_main.csv  pv_admit_reason.csv  pv_groups.csv  pv_observations.csv  (+30 more)
tests/: test_code_map.py  test_coding_standards.py  test_csv_formatting.py  test_duplicates.py  test_facilities.py  test_places.py  test_rr1.py  test_tables_completeness.py
ukrdc_ods_backup/: epraccur.csv
utils/: utils.py
(+69 files in other folders)
