[tool.poetry]
name = "registry_codes"
version = "0.1.0"
description = "A short description of the project."
packages = [{ include = "registry_codes" }]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pandas = "^2.3.3"
ukrdc-sqla = "^2.9.2"
psycopg = {extras = ["binary"], version = "^3.2.12"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
