[tool.poetry]
name = "registry_codes"
version = "3.13.0"
description = "A short description of the project."
packages = [{ include = "registry_codes" }]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pandas = "^2.3.3"
psycopg = {extras = ["binary"], version = "^3.2.12"}
ukrdc-sqla = "^3.0.3"
sqlalchemy = "^2.0.45"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.14.10,<0.15.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "bandit (>=1.9.2,<2.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "deptry (>=0.24.0,<0.25.0)",
    "tox (>=4.32.0,<5.0.0)",
    "pandas-stubs (>=2.3.3.251219,<3.0.0.0)"
]

[tool.deptry.per_rule_ignores]
DEP002 = ["psycopg"]